src/public/templates/menu/trophies-tab/trophy/trophy.styles.scss
.trophy {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &__name {
    font-size: 1rem;
    line-height: 1.5rem;
    text-align: center;
    color: $color-darkblue;
    font-weight: 700;
  }

  &__icon {
    padding: 1rem;
    opacity: 0.25;
    position: relative;
    width: 6.5rem;
    height: 6.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    text-align: center;
    color: $color-darkblue;
    border-radius: 25%;
    background: rgba($color-darkblue, 0.1);
    border: 3px solid transparent;
  }

  &__pastille {
    display: block;
    position: absolute;
    bottom: -0.75rem;
    right: -0.75rem;
    width: 1.5rem;
    height: 1.5rem;
    line-height: 1.5rem;
    text-align: center;
    color: #fff;
    font-size: 0.9rem;
    font-weight: 700;
    border-radius: 50%;
    background: #757575;
  }

  &--unlocked {
    .trophy__icon {
      opacity: 1;
    }

    &.trophy--difficulty-0 {
      .trophy__pastille{
        background: $color-bronze;
      }
    }

    &.trophy--difficulty-1 {
      .trophy__pastille{
        background: $color-gold;
      }
    }

    &.trophy--difficulty-2 {
      .trophy__pastille{
        background: $color-diamond;
      }
    }
  }
}

